--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -12,8 +12,8 @@ LISTINGS_PER_REQUEST_CONSTRAINT=50
 LISTING_REQUESTS_PER_MINUTE_CONSTRAINT=10
 LISTING_TIMEOUT_DURATION_IN_SECONDS=86400
 # AWS CREDENTIALS
-AWS_ACCESS_KEY="7878"
-AWS_SECRET_KEY="8908908908"
+AWS_ACCESS_KEY=7878
+AWS_SECRET_KEY=8908908908
 
 
 
