Commit at: Running env and app failing iteg test 1. Not all events have performers 2. Fix the serializer to only add these parameters if present 3. filter incomplete results out

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 CONSUMER_KEY=Xv4T1s5XNwIZexSlZi5HA9reQyQa
 CONSUMER_SECRET=kM_oozkZIftvU87vzLuu8bdYGS8a
 USERNAME=jordangaston1994@gmail.com
-PASSWORD=AykjoskudomecN6
+PASSWORD=yitbos321
 EVENTS_PER_REQUEST_CONSTRAINT=500
 REQUESTS_PER_MINUTE_CONSTRAINT=10
 TIMEOUT_DURATION_IN_SECONDS=3600
