--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,12 @@
 
     <groupId>jag</groupId>
     <artifactId>ShpeStubHubApiConsumer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <version>1.0-snapshot</version>
+
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -34,8 +37,9 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>  
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.2</version>
                 <configuration>
@@ -43,6 +47,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
@@ -61,6 +66,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
@@ -81,6 +87,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>com.jcabi</groupId>
                 <artifactId>jcabi-dynamodb-maven-plugin</artifactId>
@@ -99,23 +106,99 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Main-Class>shpe.consumer.app.ConsumerApp</Main-Class>
+                                        <Build-Number>1.0</Build-Number>
+                                    </manifestEntries>
+                                </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                                    <resource>src/main/resources</resource>
+                                    <file>config.properties</file>
+                                    <file>log4j.properties</file>
+                                </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                                    <resource>test/resources</resource>
+                                    <file>testconfig.properties</file>
+                                    <file>log4j.properties</file>
+                                </transformer>
+                            </transformers>
+                            <artifactSet>
+                                <excludes>
+                                    <exclude>junit:junit</exclude>
+                                    <exclude>org.mockito:mockito-all</exclude>
+                                    <exclude>com.amazonaws:DynamoDBLocal</exclude>
+                                    <exlcude>com.almworks.sqlite4java</exlcude>
+                                </excludes>
+                            </artifactSet>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.14.1</version>
+                <extensions>true</extensions>
                 <executions>
                     <execution>
+                        <id>build</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-start</id>
+                        <phase>pre-integration-test</phase>
                         <goals>
                             <goal>build</goal>
                             <goal>start</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>test-stop</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
                 </executions>
                 <configuration>
+                    <showLogs>true</showLogs>
+                    <logStdout>true</logStdout>
                     <images>
                         <image>
                             <alias>integration-test</alias>
-                            <name>consumerIntegrationTest:${project.version}</name>
+                            <name>consumerintegrationtest</name>
                             <build>
                                 <from>java:8</from>
                                 <assembly>
@@ -127,10 +210,16 @@
                                     <port>3000:${dynamodbtest.port}</port>
                                 </ports>
                                 <cmd>
-                                    <shell>java -jar
-                                        ${project.build.directory}/${project.artifactId}-${project.version}.jar
+                                    <shell>
+                                        java -jar /maven/app.jar
                                     </shell>
                                 </cmd>
+                                <log>
+                                    Started Container
+                                    <prefix>Test Container</prefix>
+                                    <date>SHORT</date>
+                                    <color>cyan</color>
+                                </log>
                             </run>
                         </image>
                     </images>
@@ -143,7 +232,7 @@
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
-            <version>2.0</version>
+            <version>2.1</version>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
@@ -215,11 +304,6 @@
             <version>2.8.1</version>
         </dependency>
         <dependency>
-            <groupId>net.java.dev.jets3t</groupId>
-            <artifactId>jets3t</artifactId>
-            <version>0.9.4</version>
-        </dependency>
-        <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-dynamodb</artifactId>
             <version>1.11.66</version>
@@ -228,6 +312,16 @@
             <groupId>com.amazonaws</groupId>
             <artifactId>DynamoDBLocal</artifactId>
             <version>[1.11,2.0)</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>2.26</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>2.26</version>
         </dependency>
     </dependencies>
     <repositories>
